Fixed: Dark mode dates are now dark mode.

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -671,6 +671,11 @@ textarea .dark {
     border: 1px transparent solid;
 }
 
+.dark .date-text {
+    background-color: #333333;
+    border: 1px solid #222222;
+}
+
 
 
 #div1Resize {
